完成个人中心信息展示

--- a/smartmore/c-end-project/src/routes/personalCenter/PersonalCenter.less
+++ b/smartmore/c-end-project/src/routes/personalCenter/PersonalCenter.less
@@ -89,13 +89,22 @@
           }
           .gender-male{
             display: inline-block;
+             background: url(../../assets/personalCenter/gender-boy.png) no-repeat center;
+             background-size: 100% 100%;
+             width: .32rem;
+             height: .32rem;
+             margin: 0 .1rem;
+             vertical-align: middle;
+          }
+           .gender-female{
+            display: inline-block;
              background: url(../../assets/personalCenter/gender-girl.png) no-repeat center;
              background-size: 100% 100%;
              width: .32rem;
              height: .32rem;
              margin: 0 .1rem;
              vertical-align: middle;
-           }
+          }
 
           .level {
             display: inline-block;
